--- a/src/widgets/header/ui/drawer/drawer.component.scss
+++ b/src/widgets/header/ui/drawer/drawer.component.scss
@@ -5,7 +5,7 @@
   max-inline-size: 100dvw;
 
   &__header {
-    padding: 1rem 1.5rem !important;
+    padding: 0.5rem 1.5rem !important;
     position: sticky;
 
     &:first-child {
