--- a/src/widgets/header/ui/header/header.component.less
+++ b/src/widgets/header/ui/header/header.component.less
@@ -1,3 +1,5 @@
+@import "@taiga-ui/core/styles/taiga-ui-local.less";
+
 :host {
   z-index: var(--app-header-z-index);
   position: sticky;
@@ -15,5 +17,9 @@
     align-items: center;
     max-width: var(--app-max-width);
     margin: auto;
+
+    @media @tui-mobile {
+      padding: 0.5rem 1.5rem;
+    }
   }
 }
